; ModuleID = '/home/carl/AnghaBench/freebsd/crypto/openssl/crypto/ocsp/extr_ocsp_vfy.c_ocsp_check_delegated.c'
source_filename = "/home/carl/AnghaBench/freebsd/crypto/openssl/crypto/ocsp/extr_ocsp_vfy.c_ocsp_check_delegated.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EXFLAG_XKUSAGE = common dso_local global i32 0, align 4
@XKU_OCSP_SIGN = common dso_local global i32 0, align 4
@OCSP_F_OCSP_CHECK_DELEGATED = common dso_local global i32 0, align 4
@OCSP_R_MISSING_OCSPSIGNING_USAGE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @ocsp_check_delegated to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ocsp_check_delegated(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  %4 = load i32*, i32** %3, align 8
  %5 = call i32 @X509_get_extension_flags(i32* %4)
  %6 = load i32, i32* @EXFLAG_XKUSAGE, align 4
  %7 = and i32 %5, %6
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %9, label %16

9:                                                ; preds = %1
  %10 = load i32*, i32** %3, align 8
  %11 = call i32 @X509_get_extended_key_usage(i32* %10)
  %12 = load i32, i32* @XKU_OCSP_SIGN, align 4
  %13 = and i32 %11, %12
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %15, label %16

15:                                               ; preds = %9
  store i32 1, i32* %2, align 4
  br label %20

16:                                               ; preds = %9, %1
  %17 = load i32, i32* @OCSP_F_OCSP_CHECK_DELEGATED, align 4
  %18 = load i32, i32* @OCSP_R_MISSING_OCSPSIGNING_USAGE, align 4
  %19 = call i32 @OCSPerr(i32 %17, i32 %18)
  store i32 0, i32* %2, align 4
  br label %20

20:                                               ; preds = %16, %15
  %21 = load i32, i32* %2, align 4
  ret i32 %21
}

declare dso_local i32 @X509_get_extension_flags(i32*) #1

declare dso_local i32 @X509_get_extended_key_usage(i32*) #1

declare dso_local i32 @OCSPerr(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
